--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,17 @@
 <html>
   <head>
     <title>SampleApp</title>
-    <%= csrf_meta_tags %>
+  
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= csrf_meta_tags %>
+
   </head>
 
 
@@ -23,7 +29,12 @@
 <%= yield %>
 
 <footer>
-  &copy; 2017 Bike Berlin
+  &copy; 2017 Bike Berlin.
+ <%= fa_stacked_icon "camera-retro", base: "square-o"%>
+
+  <%= fa_stacked_icon "facebook-square", base: "square-o", class: "pull-right" %>
+  <%= fa_stacked_icon "twitter", base: "square-o", class: "pull-right" %>
+
 </footer>
 
  
