--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Image url:</strong>
-  <%= @product.image_url %>
+  <%= image_tag @product.image_url, width: 600, height: 600 %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
