added color field and price field to products

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
 
 <%= yield %>
 
-<footer>
+<footer> <br><br><br>
+
   &copy; 2017 Bike Berlin.
  <%= fa_stacked_icon "camera-retro", base: "square-o"%>
 
