--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -26,7 +26,17 @@
     <%= form.text_field :image_url, id: :product_image_url %>
   </div>
 
-  <div class="actions">
+  <div class="field">
+  <%= form.label :price %><br>
+  <%= form.text_field :price, id: :product_price%>
+</div>
+
+  <div class="field">
+  <%= form.label :color %><br>
+  <%= form.text_field :color, id: :product_color %>
+</div>
+
+ <div class="actions">
     <%= form.submit %>
   </div>
 <% end %>
