--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,32 +2,19 @@
 
 <h1>Products</h1>
 
-<table class="table table-bordered table-hover">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container-fluid">
+  <div class="row">
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= image_tag product.image_url, width: 150, height: 150%></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="col-sm-2 col-md-4">
+       <%=image_tag product.image_url, width: 150, height: 150 %>
+        <a href="#"><h1><%= link_to product.name, product%></h1></a>
+        <p><%= product.description %></p>
+        <p><%=product.color %></p>
+        <strong><%=product.price %></strong><br><br><br>
+      </div><!-- /col -->
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
 
-<br>
 
 <%= link_to 'New Product', new_product_path %>
-
-
