--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,5 +15,15 @@
   <%= image_tag @product.image_url, width: 600, height: 600 %>
 </p>
 
+<p>
+<strong>Price:</strong>
+  <%= @product.price %>
+  </p>
+
+<p>
+  <strong>Color:</strong>
+  <%= @product.color %>
+</p>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
