--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,16 +5,20 @@
 <div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
-      <div class="col-sm-2 col-md-4">
-       <%=image_tag product.image_url, width: 150, height: 150 %>
-        <a href="#"><h1><%= link_to product.name, product%></h1></a>
+      <div class="col-sm-3 col-md-3">
+       <%=image_tag product.image_url, class: "img-responsive", width: 300, height: 200%>
+        <a href="#"><h4><%= link_to product.name, product%></h4></a>
         <p><%= product.description %></p>
         <p><%=product.color %></p>
-        <strong><%=product.price %></strong><br><br><br>
-      </div><!-- /col -->
-    <% end %>
+        <strong><%=product.price %></strong><br>
+        <td><%= link_to 'Show', product %></td>
+        <td><%= link_to 'Edit', edit_product_path(product) %></td>
+        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+       </div>
+      <% end %>
   </div>
 </div>
+
 
 
 <%= link_to 'New Product', new_product_path %>
