added images, thank_you page, and others

--- a/app/assets/stylesheets/rubycss.scss
+++ b/app/assets/stylesheets/rubycss.scss
@@ -2,8 +2,18 @@
     background-image: url('contactbackground.jpg');
     background-size: cover;
     background-attachment: fixed;
-    color: white;
+    color: #8B4513;
     padding: 40px;
-    height: 1100px;
-    width: 1100px;
+    padding-left: 40px; 
+    padding-right: 40px;
+    height: 800px;
+    width: 1000px;
+    align: center;
+    border: 3px solid green;
+}
+
+.form-contact
+{ 
+p.solid {border-style: solid;}
+
 }
