--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,14 +1,40 @@
 <div id="contact-background">
 
-<h1>Contact Me</h1>
-
 
  
-    <div><h2> Maly Ferrer</h2></div>
-    
-     Redefining Innovation
-   <p>Email: angel@codenation.com</p>
-   <p>Tel: +63928865 </p>
-   <p>You can easily shoot me an email if you have any questions or suggestions and I will get back to you as soon as I can. Alternatively you can submit a form below.</p>
+    <div><h3> Maly Ferrer</h3></div>
+  
+   <p><h4>Email: angel@codenation.com</h4></p>
+   <p><h4>Tel: +63928865</h4> </p>
+   <p><h4>You can easily shoot me an email if you have any questions or suggestions and I will get back to you as soon as I can. Alternatively you can submit a form below.</h4></p><br><br><br>
+
+
+<div><h1>Contact Us</h1></div>
+
+<%= flash[:notice] %>
+<div class = "form-contact">
+<%= form_tag(static_pages_thank_you_path) do %>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <%= label_tag :name %>
+        <%= text_field_tag :name, nil, class: "form-control", placeholder: "Enter Name" %>
+       </div>     
+      <div class="form-group">
+        <%=label_tag :email, "Email Address" %>
+        <%=text_field_tag :email, nil, class: "form-control", placeholder: "Enter Email" %>
+      </div>
+      <div class="form-group">
+        <%= label_tag :message %>
+        <%= text_area_tag :message, nil, class: "form-control", rows: 8, placeholder: "Enter Message" %>
+      </div>        
+  <%=submit_tag "Send" %>   
+  </div>
+<% end %>
 
 </div>
+</div>
+</div>
+
+
+
