--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Welcome to Bike Berlin</h1>
-<h2>Your source for used bikes in Berlin</h2>
+<h1>All Products</h1>
+
 
 
     <%= render partial: "products/product", locals: {products: @products} %>
+   
