--- a/app/views/static_pages/thank_you.html.erb
+++ b/app/views/static_pages/thank_you.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <b>Thank you. We have received your message and will respond as soon as possible.</b></div>
+    <center><b>Thank you. We have received your message and will respond as soon as possible.</b></div></center>
 
-<%= link_to 'Back', url_for(:back) %>
+<center><%= link_to 'Back', url_for(:back) %></center>
   </div><!-- / panel-body -->
