--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,8 +12,10 @@
         <p><%=product.color %></p>
         <strong><%=product.price %></strong><br>
         <td><%= link_to 'Show', product %></td>
+        <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
        </div>
       <% end %>
   </div>
