--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,2 @@
-<h1>About the App</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
-
-<p> This app is a simultaneously low maintenance app that is relevant in the </p>
+<h1>About this Page </h1>
+<p> This page is all about choosing your latest trends for shoes.</p>
