--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,11 @@
         <div class="container-fluid">
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="index"> Home </a></li>
+              <li><a href="#index"> Home </a></li>
               <li><a href="about"> About </a></li>
-              <li><a href="Products"> Products </a></li>
-              <li><a  href="contact"> Contact Info </a>
-              </li> 
+              <li><a href="products"> Products </a></li>
+              <li><a href="orders"> Order  </a></li>
+              <li><a href="static_pages/contact"> Contact Info </a></li> 
             </ul>
 
 <ul class="nav pull-right">
