--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -6,7 +6,7 @@
            <div class="rated" data-score="<%= comment.rating %>"></div>
             <p><%= comment.body %></p>
             <% if signed_in? && current_user.admin? %>
-            <p>  <%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %></p>
+            <p>  <%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure you want to delete the comment?' } %></p>
              <% end %>
         </div>
     <% end %>
