--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,6 +25,10 @@
   <%= @product.color %>
 </p>
 
+<%= form_with(url: '/payments/create') do |form| %>
+<%= render partial: "shared/stripe_checkout_button" %>
+<% end %>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
 
