--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.first_name %></td><br>
+        <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <% if user_signed_in? && current_user.admin? %>
