--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,7 +26,8 @@
 </p>
 
 <%= form_with(url: '/payments/create') do |form| %>
-<%= render partial: "shared/stripe_checkout_button" %>
+  <%= hidden_field_tag(:product_id, @product.id) %>
+  <%= render partial: "shared/stripe_checkout_button" %>
 <% end %>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
