--- a/app/assets/javascripts/ site.js.erb
+++ b/app/assets/javascripts/ site.js.erb
@@ -1,4 +1,4 @@
-$(document).on('turbolinks:load', function(){
+var refreshRating = function() {
   $('.rating').raty({
     starHalf: '<%= asset_path "star-half.png" %>',
     starOff: '<%= asset_path "star-off.png" %>',
@@ -15,4 +15,10 @@ $(document).on('turbolinks:load', function(){
       return $(this).attr("data-score");
     }
   });
+};
+
+$(document).on('turbolinks:load', function(){
+  refreshRating();
+
+  $(".img-zoom").elevateZoom({tint:true, tintColour:'#FF9999', tintOpacity:0.5});
 });
