--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,16 +1,9 @@
 <div class="product-reviews">
     <% @comments.each do |comment| %>
-        <div class="row">
-            <hr>
-            <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
-           <div class="rated" data-score="<%= comment.rating %>"></div>
-            <p><%= comment.body %></p>
-            <% if signed_in? && current_user.admin? %>
-            <p>  <%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure you want to delete the comment?' } %></p>
-             <% end %>
-        </div>
+      <%= render comment %>
     <% end %>
 </div>
+
 
 <%= current_user.first_name %>
 <%= will_paginate @comments %>
