--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -5,12 +5,13 @@
       <br><%= f.label :body, "Comments" %><br>
       <%= f.text_area :body %>
     </p>
+    <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
     <p>
     <br><div class="rating"></div><br>
   </p>
-
     <p>
       <br><%= f.submit "Submit" %><br>
     </p>
   <% end %>
+<% end %>
 <% end %>
