--- a/app/views/user_mailer/ welcome.html.erb
+++ b/app/views/user_mailer/ welcome.html.erb
@@ -4,10 +4,10 @@
       <td><h2>Welcome!</h2></td>
     </tr>
     <tr>
-      <td><p>Thank you for signing up with <%= @appname %>!</p></td>
+      <td><p>Thank you for signing up with Glimmer Girl Shoppe %>!</p></td>
     </tr>
     <tr>
-      <td><p><strong>Your <%= @appname %> Team!</strong></p></td>
+      <td><p><strong>Your Glimmer Girl Shoppe Team!</strong></p></td>
     </tr>
   </tbody>
 </table>
