--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SampleApp</title>
+    <title>Glimmer Girl Shoppe</title>
   
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -33,7 +33,7 @@
               <li><a href="#index"> Home </a></li>
               <li><a href="about"> About </a></li>
               <li><a href="products"> Products </a></li>
-              <li><a href="orders"> Order  </a></li>
+              <li><a href="users"> My Account </a></li>
               <li><a href="static_pages/contact"> Contact Info </a></li> 
             </ul>
 
@@ -71,7 +71,7 @@
 
 <div class = "image-girlshoppe">
 <div><h2> <center>Glimmer Girl Shoppe </h2></center></div>
-<center><%= image_tag("girls.jpg", :alt => "girls-pic", width: "1000", height:"300") %></center></div></h2><br>
+<center><%= image_tag("girls.jpg", :alt => "girls-pic", width: "1000", height:"300" ) %></center></div></h2><br>
 
  <%= yield %>
 
