--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,5 +17,10 @@
 .container
 {
 
-background-color: #8FBC8F;
+background-color: #8FBC8F; width: 100%; height: 100%;
+}
+
+.girls-pic
+{
+	max-width:100%;
 }
