--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,11 @@
     <%= f.text_field :first_name, autofocus: true %>
   </div>
 
+  <div class="field">
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name, autofocus: true %>
+  </div>
+
 
   <div class="field">
     <%= f.label :password %>
