--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<% cache @product do %>
+
 <p>
   <strong>Name:</strong>
   <%= @product.name %>
@@ -23,7 +25,7 @@
 <p>
   <strong>Color:</strong>
   <%= @product.color %>
-</p>
+<% end %></p>
 <p>Average Rating: <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div> </p>
 
 <%= form_with(url: '/payments/create') do |form| %>
