--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>About this Page </h1>
-<p> This page is all about choosing your latest trends for shoes.</p>
+<h3><center>About this Page </center></h3>
+<p> This page is all about choosing your latest trends for shoes. Choosing your brand and style from everyday mood makes gives you confidence.</p>
