--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+<h3>Users</h3>
 
-<table>
+ 
+<div class="row"><div class="col-md-6">
+<table class="table table-bordered"></div>
+</div>
   <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th><p>First Name</p></th>
+      <th><p>Last Name</p></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -27,5 +29,4 @@
 </table>
 
 <br>
-
-<%= link_to 'New User', new_user_path %>
+<%=link_to 'Home', root_path %>
