--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,3 +24,11 @@ background-color: #8FBC8F; width: 100%; height: 100%;
 {
 	max-width:100%;
 }
+
+#about_shoes
+{
+ padding-left: 100px;
+ color: #663399;
+ padding-top: 10px;
+
+}
