--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,10 +28,12 @@
 <% end %></p>
 <p>Average Rating: <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div> </p>
 
+<% if signed_in? %>
+
 <%= form_with(url: '/payments/create') do |form| %>
   <%= hidden_field_tag(:product_id, @product.id) %>
   <%= render partial: "shared/stripe_checkout_button" %>
-<% end %>
+<% end %><% end %>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
