--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<% if signed_in? %>
+
 <p id="notice"><%= notice %></p>
 
 <h3>Users</h3>
@@ -9,6 +11,7 @@
   <thead>
       <th><p>First Name</p></th>
       <th><p>Last Name</p></th>
+      <th><p>Actions </p></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,10 +19,10 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.first_name %></td>
+       <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <% if user_signed_in? && current_user.admin? %>
+        <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
@@ -27,6 +30,6 @@
     <% end %>
   </tbody>
 </table>
-
+ <% end %>
 <br>
 <%=link_to 'Home', root_path %>
