--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,10 @@
         <div class="container-fluid">
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="#index"> Home </a></li>
-              <li><a href="about"> About </a></li>
-              <li><a href="products"> Products </a></li>
-              <li><a href="users"> My Account </a></li>
+              <li><a href="/#index"> Home </a></li>
+              <li><a href="static_pages/about"> About </a></li>
+              <li><a href="/products"> Products </a></li>
+              <li><a href="/users"> My Account </a></li>
               <li><a href="static_pages/contact"> Contact Info </a></li> 
             </ul>
 
