--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,10 +11,12 @@
   <thead>
       <th><p>First Name</p></th>
       <th><p>Last Name</p></th>
+      <% if user_signed_in? && current_user.admin? %>
       <th><p>Actions </p></th>
       <th colspan="3"></th>
     </tr>
   </thead>
+  <% end %>
 
   <tbody>
     <% @users.each do |user| %>
