--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,7 @@
 <h3><center>About This Page </center></h3><br><br><br>
 
     <div class="row" id="about_shoes">
-    <div class="col-md-6"><p><h4> This website is all about choosing your latest trends for shoes. Choosing your brand and style from everyday mood makes gives you confidence and makes you on the go. Shoes means confidence and part of everyday lifestyle. It varies from flats to high heels and can be trendy from time to time. Some say "You're sexy because of your shoes". It always compliments the way you carry yourself. So what are you waiting for shop NOW! </p></h4></p></div>
+    <div class="col-md-6"><p><h4> This website is all about choosing your latest trends for shoes. Choosing your brand and style from everyday mood makes gives you confidence and makes you on the go. Shoes means confidence and part of everyday lifestyle. It varies from flats to high heels and can be trendy from time to time. Some say "You're sexy because of your shoes". It always compliments the way you carry yourself. So what are you waiting for? SHOP NOW! </p></h4></p></div>
 <div class = "shoeaddict">
 <%= image_tag("shoe.addict.jpg", :alt => "shoe-addict", width: "400s", height:"250" ) %></div></div>
 
