--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-<% if signed_in? %>
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -9,7 +8,11 @@
 <p>
   <strong>Last name:</strong><br>
   <%= @user.last_name %>
-</p><% end %>
+</p>
 
+<p>
+  <strong>Email:</strong><br>
+  <%= @user.email %>
+</p>
 
 <%= link_to 'Back', users_path %>
