--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Products</h1>
 
-<% cache @product do %>
+<% cache(cache_key_for_products) do %>
 <div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
