--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,45 +1,59 @@
 <p id="notice"><%= notice %></p>
 
 <% cache @product do %>
-<div class="row"> <data-product-id="<%= @product.id %>"
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+  <div class="row" data-product-id="<%= @product.id %>">
+    <div class="col-md-8 col-md-offset-2">
+      <p>
+        <strong>Name:</strong>
+        <%= @product.name %>
+      </p>
+      <p>
+        <strong>Description:</strong>
+        <%= @product.description %>
+      </p>
+      <div>
+        <p><strong>Product image:</strong></p>
+        <p><%= image_tag @product.image_url, width: 500, height: 500, class: "img-zoom"%></p>
+      </div>
+      <p>
+        <strong>Price:</strong>
+        <%= @product.price %>
+      </p>
+      <p>
+        <strong>Color:</strong>
+        <%= @product.color %>
+      </p>
+      <p>
+        <strong>Average Rating:</strong>
+        <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div>
+      </p>
+    </div>
+  </div>
+<% end %>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
 
-<p>
-  <strong>Image url:</strong>
-  <%= image_tag @product.image_url, width: 500, height: 500, class: "img-zoom"%>
-</p>
+    <div style="padding-top: 10px; padding-bottom: 10px;">
+      <%= form_with(url: '/payments/create') do |form| %>
+        <%= hidden_field_tag(:product_id, @product.id) %>
+        <%= render partial: "shared/stripe_checkout_button" %>
+      <% end %>
+    </div>
 
-<p>
-<strong>Price:</strong>
-  <%= @product.price %>
-  </p>
+    <div style="padding-top: 15px; padding-bottom: 15px;">
+      <% if signed_in? %>
+        <%= link_to 'Edit', edit_product_path(@product) %> |
+      <% end %>
+      <%= link_to 'Back', products_url %>
+    </div>
 
-<p>
-  <strong>Color:</strong>
-  <%= @product.color %>
-<% end %></p>
-<p>Average Rating: <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div></div> </p>
+    <% if signed_in? %>
+      <%= render 'new_comment' %>
+    <% end %>
+    <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+    <%= render 'comments' %>
+    <%= will_paginate @comments %>
 
-<% if signed_in? %>
-
-<%= form_with(url: '/payments/create') do |form| %>
-  <%= hidden_field_tag(:product_id, @product.id) %>
-  <%= render partial: "shared/stripe_checkout_button" %>
-<% end %><% end %>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_url %>
-
-<%= render 'new_comment' %>
-<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
-<%= render 'comments' %>
-
-<%= will_paginate @comments %>
+  </div>
+</div>
